apps/infra/pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: infra
  labels:
    app: pihole
    app.kubernetes.io/name: pihole
    app.kubernetes.io/instance: pihole
    app.kubernetes.io/part-of: phoenyxlab
    app.kubernetes.io/managed-by: kustomize
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
        app.kubernetes.io/name: pihole
        app.kubernetes.io/instance: pihole
        app.kubernetes.io/part-of: phoenyxlab
        app.kubernetes.io/managed-by: kustomize
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:2026.07.2
          ports:
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
            - containerPort: 80
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 15
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: pihole
              mountPath: /etc/pihole
              subPath: etc-pihole
            - name: pihole
              mountPath: /etc/dnsmasq.d
              subPath: etc-dnsmasq.d
      volumes:
        - name: pihole
          persistentVolumeClaim:
            claimName: pihole-config
