apps/infra/pihole/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: infra
  labels:
    app: pihole
    app.kubernetes.io/name: pihole
    app.kubernetes.io/instance: pihole
    app.kubernetes.io/part-of: phoenyxlab
    app.kubernetes.io/managed-by: kustomize
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
