apps/infra/pihole/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: infra
spec:
  selector:
    app: pihole
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
