apps/infra/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: infra
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: infra-pihole-admin-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pihole.phoenyxlab.xyz
  rules:
    - host: pihole.phoenyxlab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole
                port:
                  number: 80
